@@ -19,8 +19,8 @@
 <!-- For the regular version (with TTS), the versionCode must be odd. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="org.tlhInganHol.android.klingonassistant"
-        android:versionCode="257"
-        android:versionName="2014.11.30b (TTS)"
+        android:versionCode="259"
+        android:versionName="2014.12.02a (TTS)"
         android:installLocation="auto">
 
     <!-- Minimum Android version 2.1 (7), targeted version 4.4 (19). -->
